--- a/frontend/src/app/components/misc/experience/experience.component.html
+++ b/frontend/src/app/components/misc/experience/experience.component.html
@@ -7,6 +7,6 @@
   </h4>
   <p class="techs">Angular, Spring Boot, Postgresql</p>
 
-  <button>Détail</button>
+  <button (click)="viewDetail()">Détail</button>
 
 </div>
