--- a/frontend/src/app/components/misc/field/field.component.scss
+++ b/frontend/src/app/components/misc/field/field.component.scss
@@ -6,35 +6,44 @@
   margin-bottom: 20px;
 
   label{
-    font-weight: 400;
-    font-size: .8em;
     position: absolute;
-    top: -9px;
-    background: var(--navy);
-    padding: 0 5px;
-    color: var(--green);
-    left: 9px;
-    height: 18px;
-    line-height: 18px;
-    box-sizing: border-box;
+    color: var(--dark-green);
+    top: 50%;
+    transform: translateY(-50%);
+    left: 16px;
+    pointer-events: none;
+    transition: all .2s;
 
     //left: 20px;
   }
 
   .field{
-    background: transparent;
-    border: 1px solid var(--white);
+    //background: var(--navy-lite);
+    background: var(--navy);
+    height: 50px;
+    border: none;
+    border-bottom: 3px solid var(--dark-green);
     outline: none;
     color: var(--white);
-    padding: 7px 20px;
+    padding: 0 8px;
     font-size: 1.1em;
-    border-radius: 5px;
-    height: 30px;
 
-    // border-bottom-left-radius: 50px;
-    // border-bottom-right-radius: 50px;
-    // border-top-left-radius: 50px;
-    // border-top-right-radius: 50px;
+    border: 3px solid var(--grey);
+    border-radius: 3px;
+
+    &.multiline {
+      height: 250px;
+      resize: none;
+    }
+
+    &:not(:placeholder-shown), &:focus{
+
+      & + label {
+        transform: translate(-15px, -45px);
+        font-size: .8em;
+      }
+
+    }
   }
 
   i{
