--- a/frontend/src/app/components/misc/project/project.component.scss
+++ b/frontend/src/app/components/misc/project/project.component.scss
@@ -98,19 +98,19 @@
         right: 50%;
       }
     }
-
   }
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 700px) {
   :host, :host.odd{
 
     .container{
-      left: 50%;
-      transform: translateX(-50%);
       right: auto;
-      display: block;
       margin-bottom: 5%;
+      justify-content: center;
+      left: 0;
+      transform: none;
+      position: relative;
 
       .nav{
         display: block;
@@ -118,7 +118,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        right: 10%;
+        right: 0;
         background: var(--navy-shadow);
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
@@ -129,11 +129,19 @@
       }
 
       img{
-        width: 90%;
+        width: 100%;
+        border-radius: 5px;
       }
 
       .img-overlay{
-        display: none;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        transform: none;
+        width: 100%;
+        background: var(--green);
+        opacity: .1;
       }
     }
   }
