--- a/frontend/src/app/components/structure/header/header.component.scss
+++ b/frontend/src/app/components/structure/header/header.component.scss
@@ -117,7 +117,7 @@ header{
   }
 }
 
-@media screen and (max-width: 770px){
+@media screen and (max-width: 700px){
   header{
 
     padding: 0 5%;
@@ -134,6 +134,6 @@ header{
   }
 
   .chapter-group{
-    right: 10px;
+    display: none;
   }
 }
