--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <span #anchor id="begin" style="position: absolute; top: 0; left: 0"></span>
-<section id="home">
+<section id="home" class="first">
 
   <div class="main_title">
     <h1 data-aos="fade-up" data-aos-delay="700">David Ferlay</h1>
@@ -7,7 +7,10 @@
     <p style="font-size: .9em;  overflow: auto; box-sizing: border-box;" data-aos="fade-up" data-aos-delay="900">
       Text
     </p>
-    <button class="large" (click)="navigationService.scrollTo('review')" data-aos="fade-up" data-aos-delay="1000">Commencer la visite</button>
+    <div class="button-wrapper">
+      <button class="large" (click)="navigationService.scrollTo('review')" data-aos="fade-up" data-aos-delay="1000" data-aos-offset="-100">Commencer la visite</button>
+    </div>
+
   </div>
 
   <app-avatar></app-avatar>
@@ -16,37 +19,42 @@
 
 </section>
 
-<section id="review" #anchor>
+<section id="review" #anchor class="nolimit">
   <h2 data-aos="fade-left"><span>01.</span>A propos</h2>
-  <div class="section-block">
-    <h2 class="fadeIn translateY"><i class="fa-solid fa-caret-right"></i>A propos</h2>
+  <div class="resumeNav">
+    <span class="navLink active" #navLink (click)="onResumeNavLinkClick(0)">Services</span>
+    <span class="navLink" #navLink (click)="onResumeNavLinkClick(1)">Comp. front</span>
+    <span class="navLink" #navLink (click)="onResumeNavLinkClick(2)">Comp. back</span>
   </div>
-  <div class="grid">
-    <div class="skill-list">
-      <h3 data-aos="fade">Services</h3>
-      <ul>
-        <li data-aos="fade-up" data-aos-delay="0">Site web, site vitrine, E-commerce ...</li>
-        <li data-aos="fade-up" data-aos-delay="50">Devis gratuit</li>
-        <li data-aos="fade-up" data-aos-delay="100">Accompagnement et suivi</li>
-        <li data-aos="fade-up" data-aos-delay="150">Bonjour</li>
-      </ul>
-    </div>
-
-    <div class="skill-list">
-      <h3 data-aos="fade" data-aos-delay="350">Frontend</h3>
-      <div *ngFor="let skill of skills?.front; let index = index" data-aos="fade-up" [attr.data-aos-delay]="400 + index * 100" >
-        <app-progress-bar [title]="skill.label" [percent]="skill.level"></app-progress-bar>
+  <div class="grid-wrapper">
+    <div class="grid" #grid>
+      <div class="skill-list">
+        <h3 data-aos="fade">Services</h3>
+        <ul>
+          <li data-aos="fade-up" data-aos-delay="0">Site web, site vitrine, E-commerce ...</li>
+          <li data-aos="fade-up" data-aos-delay="50">Devis gratuit</li>
+          <li data-aos="fade-up" data-aos-delay="100">Accompagnement et suivi</li>
+          <li data-aos="fade-up" data-aos-delay="150">Bonjour</li>
+        </ul>
       </div>
-    </div>
 
-    <div class="skill-list">
-      <h3 data-aos="fade" data-aos-delay="450">Backend</h3>
-      <div *ngFor="let skill of skills?.back; let index = index" data-aos="fade-up" [attr.data-aos-delay]="(500 + 100 * skills?.front!.length) + 100 * index">
-        <app-progress-bar [title]="skill.label" [percent]="skill.level"></app-progress-bar>
+      <div class="skill-list">
+        <h3 data-aos="fade" data-aos-delay="350">Frontend</h3>
+        <div *ngFor="let skill of skills?.front; let index = index" data-aos="fade-up" [attr.data-aos-delay]="400 + index * 100" >
+          <app-progress-bar [title]="skill.label" [percent]="skill.level"></app-progress-bar>
+        </div>
       </div>
-    </div>
 
+      <div class="skill-list">
+        <h3 data-aos="fade" data-aos-delay="450">Backend</h3>
+        <div *ngFor="let skill of skills?.back; let index = index" data-aos="fade-up" [attr.data-aos-delay]="(500 + 100 * skills?.front!.length) + 100 * index">
+          <app-progress-bar [title]="skill.label" [percent]="skill.level"></app-progress-bar>
+        </div>
+      </div>
+
+    </div>
   </div>
+
 </section>
 
 <section id="experiences" class="nolimit">
@@ -63,20 +71,20 @@
     <app-project></app-project>
   </div>
 
-  <div [attr.data-aos]="'zoom-in-left'" data-aos-duration="700" data-aos-offset="500">
+  <div [attr.data-aos]="'zoom-in-left'" data-aos-duration="700" data-aos-offset="100">
     <app-project class="odd" ></app-project>
   </div>
 
 
 </section>
 
-<section id="contact">
+<section id="contact" class="nolimit">
   <h2 data-aos="fade-left"><span>04.</span>Me contacter</h2>
   <div class="form-container" >
     <form data-aos="zoom-in" data-aos-offset="200">
       <app-field label="Adresse e-mail" formControlName="label"></app-field>
       <app-field label="Objet" formControlName="level"></app-field>
-      <textarea></textarea>
+      <app-field [multiline]="true"></app-field>
       <button type="submit" class="squared" placeholder="Entrez votre message">Envoyer</button>
     </form>
   </div>
