--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,3 +1,38 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '~@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$portfolio-primary: mat.define-palette(mat.$indigo-palette);
+$portfolio-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$portfolio-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$portfolio-theme: mat.define-light-theme((
+  color: (
+    primary: $portfolio-primary,
+    accent: $portfolio-accent,
+    warn: $portfolio-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($portfolio-theme);
+
 @import './animation.scss';
 
 :root{
@@ -40,7 +75,7 @@
 
     button{
       padding: 10px 20px;
-      border: 2px solid var(--green);
+      border: 3px solid var(--green);
       color: var(--white);
       letter-spacing: 3px;
       background-color: transparent;
@@ -51,7 +86,7 @@
       border-bottom-left-radius: 50px;
       border-bottom-right-radius: 50px;
       font-family: Roboto;
-      //transition: all .2s;
+      transition: all .2s;
 
       &:hover{
         background: rgba(100,255,218,0.1);
@@ -65,6 +100,9 @@
       &[type=submit]{
         border-radius: 5px;
         width: 100%;
+        height: 50px;
+        font-family: Roboto;
+        font-size: 1.1em;
       }
     }
 
@@ -93,3 +131,6 @@
 ::-webkit-scrollbar-thumb:hover {
   background: var(--green)
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
