update: skill admin

--- a/frontend/src/app/admin/admin.component.html
+++ b/frontend/src/app/admin/admin.component.html
@@ -1,9 +1,3 @@
 
-<section>
-  <form [formGroup]="skillFormGroup" (submit)="onSkillFormSubmit()">
-    <h5>Ajouter une compétence</h5>
-    <app-field label="Nom de la compétence" formControlName="label"></app-field>
-    <app-field label="Nom de la compétence" formControlName="level"></app-field>
-    <button type="submit">Enregistrer</button>
-  </form>
-</section>
+
+<app-skill-admin id="review"></app-skill-admin>
