--- a/frontend/src/app/components/misc/experience/experience.component.html
+++ b/frontend/src/app/components/misc/experience/experience.component.html
@@ -1,11 +1,11 @@
 <div class="container">
   <h4>
     <p>
-       <span>Mistral Informatique</span> - <span>{{title}}</span>
+       <span>{{company}}</span> - <span>{{title}}</span>
     </p>
-    <span>Depuis Novembre 2021</span>
+    <span>{{timeline}}</span>
   </h4>
-  <p class="techs">Angular, Spring Boot, Postgresql</p>
+  <p class="techs">{{post}}</p>
 
   <button (click)="viewDetail()">Détail</button>
 
