--- a/frontend/src/app/components/misc/experience/experience-detail/experience-detail.component.html
+++ b/frontend/src/app/components/misc/experience/experience-detail/experience-detail.component.html
@@ -1,7 +1,1 @@
-<div class="container">
-  <ul style="background: red;">
-    <li><span>Entité: </span></li>
-    <li><span>Mission: </span></li>
-    <li><span>Lieu: </span></li>
-  </ul>
-</div>
+<p-editor class="readOnly" [readonly]="true"></p-editor>
