--- a/frontend/src/app/components/structure/header/header.component.scss
+++ b/frontend/src/app/components/structure/header/header.component.scss
@@ -104,6 +104,10 @@ header{
     justify-content: center;
     align-items: center;
 
+    &.current {
+      background: red;
+    }
+
     &.disabled{
       color: var(--grey);
       border-color: var(--grey);
