--- a/frontend/src/app/components/dialogs/confirm/confirm.component.html
+++ b/frontend/src/app/components/dialogs/confirm/confirm.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h3 class="title"><i [class]="icon"></i>{{title}}</h3>
+  <!-- <h3 class="title"><i [class]="icon"></i>{{title}}</h3> -->
   <p class="message">{{message}}</p>
   <div class="button-group">
     <button [disabled]="disableYes" (click)="afterYes()" class="danger">{{yesText}}</button>
