--- a/frontend/src/app/components/misc/field/field.component.scss
+++ b/frontend/src/app/components/misc/field/field.component.scss
@@ -14,6 +14,9 @@
     pointer-events: none;
     transition: all .2s;
 
+    &.disabled {
+      color: var(--grey)
+    }
     //left: 20px;
   }
 
@@ -46,8 +49,54 @@
     }
   }
 
+  input[type="date"]::-webkit-calendar-picker-indicator {
+    background: transparent;
+    color: transparent;
+  }
+
+  input[type=checkbox] {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translate(calc(50% + 1px), calc(-50% - 2px));
+    appearance: none;
+    border: 3px solid var(--grey);
+    width: 24px;
+    height: 24px;
+    background: var(--navy);
+    border-radius: 3px;
+    cursor: pointer;
+    transition: all .2s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &:after {
+      display: block;
+      content: '\f00c';
+      font-family: "Font Awesome 5 Free";
+      font-weight: 900;
+      color: var(--green);
+      transition: all .2s;
+      transform: scale(0) rotate(180deg);
+    }
+
+    &:checked{
+
+      &::after{
+        transform: scale(1) rotate(0);
+      }
+    }
+
+    &:not(:checked) {
+
+      &:hover {
+        background: var(--navy-lite)
+      }
+    }
+  }
+
   i{
     height: 50px;
-    background: red;
   }
 }
