add: project admin

--- a/frontend/src/app/admin/admin.component.html
+++ b/frontend/src/app/admin/admin.component.html
@@ -4,4 +4,6 @@
 <app-skill-admin></app-skill-admin>
 <span class="anchor" id="experiences" class="anchor"></span>
 <app-experience-admin ></app-experience-admin>
+<span class="anchor" id="projects" class="anchor"></span>
+<app-project-admin></app-project-admin>
 
