--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,9 @@
-<app-header></app-header>
+<app-header *ngIf="_router.url != '/login'"></app-header>
 
-<main>
+<main [ngClass]="{'navigable': _router.url != '/login'}">
 
   <router-outlet (activate)="onActivate()"></router-outlet>
 
 </main>
 
-<footer></footer>
+<footer  *ngIf="_router.url != '/login'"></footer>
