--- a/frontend/src/app/components/dialogs/confirm/confirm.component.scss
+++ b/frontend/src/app/components/dialogs/confirm/confirm.component.scss
@@ -12,8 +12,8 @@
 .message {
   color: var(--white);
   margin: 0;
-  padding: 15px 0 25px;
-  font-size: .9em;
+  padding: 15px 25px 50px;
+  font-size: 1em;
 }
 
 .button-group {
