--- a/frontend/src/app/components/misc/experience/experience-detail/experience-detail.component.html
+++ b/frontend/src/app/components/misc/experience/experience-detail/experience-detail.component.html
@@ -1,1 +1,1 @@
-<p-editor class="readOnly" [readonly]="true"></p-editor>
+<p-editor class="readOnly" [readonly]="true" [(ngModel)]="experience.detail"></p-editor>
