--- a/frontend/src/app/connection/connection.component.scss
+++ b/frontend/src/app/connection/connection.component.scss
@@ -1,5 +1,11 @@
-div {
+.container {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
+
+  form {
+    width: 600px;
+    max-width: 90%;
+  }
 }
