--- a/frontend/src/app/admin/project-admin/project-admin.component.scss
+++ b/frontend/src/app/admin/project-admin/project-admin.component.scss
@@ -5,7 +5,6 @@ section{
   border: 1px solid var(--green);
   border-radius: 3px;
   position: relative;
-  margin-bottom: 104px;
 
   h1{
     padding: 0;
@@ -23,15 +22,11 @@ section{
     gap: 24px;
   }
 
-  .exp-grid {
-    display: grid;
-    grid-template-columns: 2fr 3fr;
-    height: calc(100% - 70px);
-    gap: 30px;
-
-    button {
-      margin-top: 5px;
-    }
+  .buttons {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 10px;
   }
 
   .button-grid {
@@ -46,14 +41,42 @@ section{
     padding: 20px;
   }
 
-  .buttons {
-    display: flex;
-    justify-content: flex-end;
-    gap: 10px;
+  .checkIcon{
+    color: var(--green);
+    font-size: 1.3em;
+    animation-delay: 2s;
+    animation: checkIconAppears .3s forwards;
   }
 
+  .pro-grid {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    height: calc(100% - 70px);
+    gap: 30px;
+    position: relative;
+
+    button {
+      margin-top: 5px;
+    }
+  }
+}
+
+input[type=file] {
+  height: 0;
+  width: 0;
+  padding: 0;
+  margin: 0;
 }
 
 :host ::ng-deep app-item-list > div{
   height: 100%;
+}
+
+@keyframes checkIconAppears {
+  from{
+    transform: scale(0) rotate(180deg);
+  }
+  to{
+    transform: scale(1) rotate(0);
+  }
 }
