--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -95,6 +95,10 @@ $portfolio-theme: mat.define-light-theme((
         color: rgb(255, 176, 176);
       }
 
+      &.warning:not(:disabled) {
+        color: rgb(255, 206, 59);
+      }
+
       &:disabled{
         pointer-events: none;
         border-color: var(--grey);
@@ -209,6 +213,17 @@ $portfolio-theme: mat.define-light-theme((
   height: 100%;
   max-height: 100%;
 
+  &.disabled {
+
+    border-color: var(--grey);
+    pointer-events: none;
+
+    li{
+      color: var(--grey);
+      border-color: var(--grey)
+    }
+  }
+
   li {
     display: flex;
     height: 50px;
@@ -316,6 +331,23 @@ p-editor {
   }
 }
 
+input[type=date] {
+  font-family: Roboto;
+
+  &:after {
+    content: '\f133';
+    display: block;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 400;
+    color: var(--dark-green);
+  }
+}
+
+.warningIcon{
+  color: orange;
+  font-size: 1.3em;
+}
+
 p-dynamicdialog {
   .p-dialog .p-dialog-header, .p-dialog .p-dialog-content, .p-dialog .p-dialog-footer {
     background: var(--navy);
@@ -334,6 +366,7 @@ p-dynamicdialog {
   .p-dialog .p-dialog-header {
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
+    padding-bottom: 0;
   }
 
   .p-dialog .p-dialog-footer {
