--- a/frontend/src/app/components/misc/progress-bar/progress-bar.component.html
+++ b/frontend/src/app/components/misc/progress-bar/progress-bar.component.html
@@ -5,7 +5,7 @@
     <span>{{percent}}%</span>
   </div>
 
-  <div class="bar"><div class="fill" [ngStyle]="{width: percent+'%'}"></div></div>
+  <div class="bar"><div class="fill" [style.width.%]="percent"></div></div>
 
 </div>
 
