--- a/frontend/src/app/components/misc/project/project.component.scss
+++ b/frontend/src/app/components/misc/project/project.component.scss
@@ -23,7 +23,8 @@
       top: 0;
       left: 0;
       background: var(--green);
-      opacity: .2;
+      opacity: .65;
+      opacity: 0;
       width: 70%;
       height: 100%;
       transition: opacity .3s;
@@ -63,9 +64,6 @@
       .btn-group{
         padding: 15px;
         border-top: 1px solid var(--grey);
-        // display: flex;
-        // gap: 10px;
-        // justify-content: space-between;
         position: relative;
         height: 50px;
 
@@ -76,7 +74,7 @@
           top: 25px;
           transform: translateY(-50%);
 
-          &:last-child {
+          &.right {
             left: auto;
             right: 16px;
           }
@@ -114,7 +112,7 @@
   }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
   :host, :host.odd{
 
     .container{
